--- a/factorio-zygote.cabal
+++ b/factorio-zygote.cabal
@@ -26,7 +26,7 @@ library
                        Prelude
 
   build-depends:       base-noprelude ^>= 4.12.0.0
-                     , Relude
+                     , relude
 
   ghc-options:         -Wall
                        -Wincomplete-uni-patterns
@@ -37,6 +37,7 @@ library
                        -fhide-source-paths
                        -Wmissing-export-lists
                        -Wpartial-fields
+                       -Werror
 
   default-language:    Haskell2010
 
@@ -46,7 +47,7 @@ executable factorio-zygote
 
   build-depends:       base-noprelude ^>= 4.12.0.0
                      , factorio-zygote
-                     , Relude
+                     , relude
 
   ghc-options:         -Wall
                        -threaded
@@ -60,6 +61,7 @@ executable factorio-zygote
                        -fhide-source-paths
                        -Wmissing-export-lists
                        -Wpartial-fields
+                       -Werror
 
   default-language:    Haskell2010
 
@@ -70,7 +72,7 @@ test-suite factorio-zygote-test
 
   build-depends:       base-noprelude ^>= 4.12.0.0
                      , factorio-zygote
-                     , Relude
+                     , relude
 
   ghc-options:         -Wall
                        -threaded
@@ -84,6 +86,7 @@ test-suite factorio-zygote-test
                        -fhide-source-paths
                        -Wmissing-export-lists
                        -Wpartial-fields
+                       -Werror
 
   default-language:    Haskell2010
 
@@ -95,7 +98,7 @@ benchmark factorio-zygote-benchmark
   build-depends:       base-noprelude ^>= 4.12.0.0
                      , gauge
                      , factorio-zygote
-                     , Relude
+                     , relude
 
   ghc-options:         -Wall
                        -threaded
@@ -109,5 +112,6 @@ benchmark factorio-zygote-benchmark
                        -fhide-source-paths
                        -Wmissing-export-lists
                        -Wpartial-fields
+                       -Werror
 
   default-language:    Haskell2010
